--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  flutter_launcher_icons: ^0.9.0
   flutter_spinkit: ^5.0.0
   http: ^0.13.1
 
@@ -68,3 +69,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  image_path: "ImageDirectory/icon.jpg"
+  android: true
+  ios: true
